--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/three": "^0.132.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.132.2",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
