Using axis aligned boxes as initial collision step

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --maxWorkers=1",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +47,11 @@
     ]
   },
   "jest": {
+    "globals": {
+      "ts-jest": {
+        "isolatedModules": true
+      }
+    },
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
