--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "jest": "^27.5.1",
     "react-scripts": "^5.0.0",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "npm": "8.5.0",
+    "node": "16.14.2"
+  },
+  "engines": {
+    "npm": "8.5.0",
+    "node": "16.14.2"
   },
   "engines": {
     "node": "16.14.2",
