--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-lic",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@types/node": "^12.20.26",
@@ -29,12 +29,8 @@
     "react-scripts": "^5.0.0",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
-    "npm": "8.5.0",
-    "node": "16.14.2"
-  },
-  "engines": {
-    "npm": "8.5.0",
-    "node": "16.14.2"
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "engines": {
     "node": "16.14.2",
