--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.132.0",
+    "css": "^3.0.0",
     "css-select": "^4.3.0",
     "minimist": "^1.2.6",
     "node-forge": "^1.3.1",
@@ -17,20 +18,21 @@
     "three": "^0.132.2",
     "web-vitals": "^1.1.2"
   },
-  "overrides": {
-    "svgo": "^2.8.0"
-  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.4.1",
+    "ansi-regex": "^6.0.1",
     "jest": "^27.5.1",
+    "node": "16.14.2",
+    "npm": "^8.5.0",
     "react-scripts": "^5.0.0",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
-    "node": "16.14.2",
-    "npm": "8.5.0"
+    "typescript": "^4.5.5"
+  },
+  "overrides": {
+    "svgo": "^2.8.0"
   },
   "engines": {
     "node": "16.14.2",
@@ -38,7 +40,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "jest --maxWorkers=1",
     "eject": "react-scripts eject"
   },
