--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,10 @@
   "rules" : {
     "no-unused-vars": "off",
     "unused-imports/no-unused-vars": "warn",
-    "unused-imports/no-unused-imports": "error"
+    "unused-imports/no-unused-imports": "error",
+    "semi": "error",
+    "no-extra-semi": "warn",
+    "no-unexpected-multiline": "warn"
   },
   "extends": [
     "eslint:recommended",
