--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.132.0",
+    "bootstrap": "^5.1.3",
     "css": "^3.0.0",
     "css-select": "^4.3.0",
     "minimist": "^1.2.6",
     "node-forge": "^1.3.1",
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
     "svgo": "^2.8.0",
     "three": "^0.132.2",
