--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-bootstrap": "^0.32.29",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.132.0",
     "bootstrap": "^5.1.3",
@@ -16,6 +17,7 @@
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "svgo": "^2.8.0",
     "three": "^0.132.2",
