--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.5.1",
+    "marked": "^4.2.5",
     "node": "16.14.2",
     "npm": "^8.5.0",
     "react-scripts": "^5.0.0",
+    "replace": "^1.2.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
@@ -50,11 +52,15 @@
     "npm": "8.5.0"
   },
   "scripts": {
+    "prestart": "npm run readme",
     "start": "react-scripts start",
+    "prebuild": "npm run readme",
     "build": "react-scripts build",
     "test": "jest --maxWorkers=1",
     "eslint": "eslint . --ext .ts --ext .tsx --ext .js",
-    "eslint-fix": "eslint . --ext .ts --ext .tsx --ext .js --fix"
+    "eslint-fix": "eslint . --ext .ts --ext .tsx --ext .js --fix",
+    "readme": "npx marked -i README.md -o public/markdown/generated/readme.html",
+    "postreadme": "npx replace '/public' '' public/markdown/generated/readme.html"
   },
   "eslintConfig": {
     "extends": [
